test/fail/basic_syntax/docstring_bad_indent.lly
#[
SyntaxError: Docstring line does not start with full '###'.
    from docstring_bad_indent.lly:7:
]#

###
##
define f {}
